# RLAP

./: CHANGELOG.md  LICENSE  README.md  SPEC.md  pyproject.toml
docs/: wire-format.md
examples/: chess_local.py  envelope_sizes.py  ttt_cli.py  ttt_local.py
src/lrgp/: __init__.py  app_base.py  constants.py  dedup.py  envelope.py  transport.py
src/lrgp/apps/: __init__.py  chess.py
src/rlap/: __init__.py  _msgpack.py  app_base.py  constants.py  envelope.py  errors.py  router.py  session.py  store.py  transport.py
src/rlap/apps/: tictactoe.py
tests/: test_chess.py  test_dedup.py  test_envelope.py  test_router.py  test_session.py  test_store.py  test_tictactoe.py  test_wire_budget.py
